fixed swagger docs
