# docs/swagger.yaml
@@ -1,5 +1,21 @@
 basePath: /api/v1
-host: localhost:8080
+definitions:
+  editor.ConfigBundle:
+    properties:
+      certs:
+        additionalProperties:
+          items:
+            type: integer
+          type: array
+        type: object
+      config.yaml:
+        additionalProperties: true
+        type: object
+      managedFieldGroups:
+        items:
+          type: string
+        type: array
+    type: object
 info:
   contact:
     email: joking@redhat.com
@@ -8,11 +24,67 @@ info:
   title: Config Tool Editor API
   version: "0.0"
 paths:
-  /api/v1/config:
+  /accounts/operator:
+    post:
+      consumes:
+      - application/json
+      description: Handles an HTTP POST request containing a new `config.yaml`, adds any uploaded certs, and calls an API endpoint on the Quay Operator to create a new `Secret`.
+      parameters:
+      - description: JSON Representing Config Bundle
+        in: body
+        name: configBundle
+        required: true
+        schema:
+          $ref: '#/definitions/editor.ConfigBundle'
+      produces:
+      - application/json
+      summary: Commits a config bundle to a Quay operator instance.
+  /config:
     get:
       description: This endpoint will load the config bundle mounted by the config-tool into memory. This state can then be modified, validated, downloaded, and optionally committed to a Quay operator instance.
       produces:
       - application/json
-      responses: {}
-      summary: Load the mounted config bundle into local state
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/editor.ConfigBundle'
+      summary: Returns the mounted config bundle.
+  /config/download:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint will download the config bundle in the request body as a tar.gz
+      parameters:
+      - description: JSON Representing Config Bundle
+        in: body
+        name: configBundle
+        required: true
+        schema:
+          $ref: '#/definitions/editor.ConfigBundle'
+      produces:
+      - multipart/form-data
+      responses:
+        "200": {}
+      summary: Downloads a config bundle as a tar.gz
+  /config/validate:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint will validate the config bundle contained in the request body.
+      parameters:
+      - description: JSON Representing Config Bundle
+        in: body
+        name: configBundle
+        required: true
+        schema:
+          $ref: '#/definitions/editor.ConfigBundle'
+      produces:
+      - application/json
+      summary: Validates a config bundle.
+schemes:
+- http
+securityDefinitions:
+  BasicAuth:
+    type: basic
 swagger: "2.0"
